--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
 }
 
 h1 {
-	font-family: "Neue Montreal", serif;
+	font-family: sans-serif;
 	font-size: 70px;
 	font-weight: 300;
 	color: #fff;
